[gd_scene load_steps=16 format=2]

[ext_resource path="res://source/Player/PlayerSkin.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/Main/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://source/Player/States/Idle.gd" type="Script" id=3]
[ext_resource path="res://source/Player/States/Run.gd" type="Script" id=4]
[ext_resource path="res://source/Player/States/Move.gd" type="Script" id=5]
[ext_resource path="res://source/Player/States/Air.gd" type="Script" id=6]
[ext_resource path="res://source/Player/Player.gd" type="Script" id=7]
[ext_resource path="res://source/Player/Detectors/WallDetector.tscn" type="PackedScene" id=8]
[ext_resource path="res://source/Player/States/Wall.gd" type="Script" id=9]
[ext_resource path="res://source/Player/Detectors/FloorDetector.tscn" type="PackedScene" id=10]
[ext_resource path="res://source/Corpse/Corpse_Spawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://source/Player/States/Spawn.gd" type="Script" id=12]
[ext_resource path="res://source/Player/States/Death.gd" type="Script" id=13]
[ext_resource path="res://source/Player/Detectors/RoofDetector.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 9.5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 34
script = ExtResource( 7 )
corpse_lives = 30

[node name="PlayerSkin" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9.5 )
shape = SubResource( 7 )

[node name="WallDetector" parent="." instance=ExtResource( 8 )]

[node name="FloorDetector" parent="." instance=ExtResource( 10 )]

[node name="RoofDetector" parent="." instance=ExtResource( 14 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 3 )

[node name="JumpBuffer" type="Timer" parent="StateMachine/Move/Idle"]
wait_time = 0.14
one_shot = true

[node name="Wall" type="Node" parent="StateMachine/Move"]
script = ExtResource( 9 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 4 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="JumpDelay" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.2
one_shot = true

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Corpse_Spawner" parent="." instance=ExtResource( 11 )]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
